Slight change title

--- a/main.tex
+++ b/main.tex
@@ -1000,7 +1000,7 @@ Combining the results of the previous sections with \Cref{prop:reduction-of-gaus
 	\end{align*}
 \end{remark}
 
-\subsection{Invariance of $\langle \JacobiKernel{}, R_T(\theta) \rangle$ under geometric conjugacy}
+\subsection{Invariance of $\innerproduct{\genHermitianJacobiKernel{\hermitianSpace}{\chi}}{R_{T,\theta}}$ under geometric conjugacy}
 
 Let $f \colon \algebraicGroup{G}^{\Frobenius} \to \cComplex$ be a class function. Then by Schur's lemma for any irreducible representation $\pi$, there exists $\gamma_{f}\left(\pi\right) \in \cComplex$ such that $$\sum_{g \in G} f(g)\pi(g) = \gamma_{f}\left(\pi\right) \cdot \idmap_{\pi}.$$
 
