Adjustments for the unitary case :(

--- a/main.tex
+++ b/main.tex
@@ -948,7 +948,7 @@ Thus, we obtained the following.
 Recall that by \Cref{subsubsec:rational-tori} maximal rational tori of $\algebraicGroup{G}$ correspond to certain pairs of partitions $\left(\lambda^+, \lambda^-\right)$ and we have that the $\Frobenius$ fixed points of a maximal torus $\algebraicGroup{T}$ corresponding to the pair $\left(\lambda^+, \lambda^-\right)$ are of the form $$T = \algebraicGroup{T}^{\Frobenius} \cong \prod_{j=1}^{\lengthof(\lambda^+)} \multiplicativegroup{\finiteFieldExtension{\lambda_j^{+}}} \times \prod_{i=1}^{\lengthof(\lambda^-)} \NormOneGroup{2 \lambda_i^{-}},$$
 where if $\algebraicGroup{G}$ is a unitary group then $\lambda_j^{+}$ is even for every $j$, and thus $\finiteFieldExtension{\lambda^+_j}$ is always a field extension of $\quadraticExtension$.
 
-Given a character $$\theta = \prod_{j=1}^{\lengthof(\lambda^+)} \alpha_j \times \prod_{i=1}^{\lengthof(\lambda^-)} \theta_i \colon \algebraicGroup{T}^{\Frobenius} \to \multiplicativegroup{\cComplex},$$ we choose a torus of $T'$ of $\GL_{2 \left\lfloor\frac{\dim_{\finiteField} \hermitianSpace}{2}\right\rfloor}\left(\quadraticExtension\right)$ of the form $$T' \cong \prod_{j=1}^{\lengthof(\lambda^+)} \left(\multiplicativegroup{\finiteFieldExtension{\lambda_j^{+}}} \times \multiplicativegroup{\finiteFieldExtension{\lambda_j^{+}}}\right) \times \prod_{i=1}^{\lengthof(\lambda^-)} \multiplicativegroup{\finiteFieldExtension{2 \lambda_i^{-}}}$$ and define a character $\theta' \colon T' \to \multiplicativegroup{\cComplex}$ by the formula
+Given a character $$\theta = \prod_{j=1}^{\lengthof(\lambda^+)} \alpha_j \times \prod_{i=1}^{\lengthof(\lambda^-)} \theta_i \colon \algebraicGroup{T}^{\Frobenius} \to \multiplicativegroup{\cComplex},$$ we choose a torus of $T'$ of $\GL_{\frac{2}{\grpIndex{\quadraticExtension}{\finiteField}} \left\lfloor\frac{\dim_{\finiteField} \hermitianSpace}{2}\right\rfloor}\left(\quadraticExtension\right)$ of the form $$T' \cong \prod_{j=1}^{\lengthof(\lambda^+)} \left(\multiplicativegroup{\finiteFieldExtension{\lambda_j^{+}}} \times \multiplicativegroup{\finiteFieldExtension{\lambda_j^{+}}}\right) \times \prod_{i=1}^{\lengthof(\lambda^-)} \multiplicativegroup{\finiteFieldExtension{2 \lambda_i^{-}}}$$ and define a character $\theta' \colon T' \to \multiplicativegroup{\cComplex}$ by the formula
 $$\theta' = \prod_{j=1}^{\lengthof(\lambda^+)} \left(\alpha_j \times \minusInvolution{\alpha}_j\right) \times \prod_{i=1}^{\lengthof(\lambda^-)} \theta'_j,$$
 where we recall that $\theta'_j \colon \multiplicativegroup{\finiteFieldExtension{2 \lambda_j^{-}}} \to \multiplicativegroup{\cComplex}$ is given by $$\theta'_j\left(x\right) = \theta_j\left(x^{1-q^{\lambda_j^-}}\right).$$
 
